[package]
name = "loreum-distributor"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
rand_core = { version = "0.5", features = ["getrandom"] }
vercel_lambda = "0.2.0"
x25519-dalek = "1.2.0"

[[bin]]
name = "status"
path = "api/status.rs"

[[bin]]
name = "hash"
path = "api/hash.rs"
